--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
      labels:
        app: {{ template "mediawiki.name" .}}
      containers:
-     - name: {{ template "persistence-query-service.name" .}}
+     - name: {{ template "mediawiki.name" .}}
        image: "{{ .Values.image.repository}}:{{ .Values.image.tag}}"
        imagePullPolicy: "{{ .Values.image.pullPolicy}}"
        volumeMounts:
@@ -35,7 +35,7 @@ spec:
        - name: db_name
          value : "{{ .Values.wikidbvalues.dbname }}" 
        - name: db_IP
-         value : "{{ template "db.node" . }}"
+         value : "{{ .Values.wikidbvalues.dbip }}"
        - name: db_PORT
          value : "123"
        - name: db_USERNAME
@@ -46,5 +46,5 @@ spec:
        - name: db_PASSWORD
          valueFrom:
             secretKeyRef:
-                name: "{{ .Values.queryservicecrdval.username }}"
+                name: "{{ .Values.wikidbvalues.username }}"
                 key: password
